test/conformance/chainsaw/cli/apply/apply-ivps-in-cluster-mode-with-polex/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-ivps-in-cluster-mode-with-polex
spec:
  concurrent: false
  namespace: default
  steps:
  - name: step-01
    try:
    - create:
        file: resources.yaml
  - name: step-02
    try:
    - script:
        content: kyverno apply policy.yaml --exception exception.yaml --cluster
        check:
          # the policy's message, then why Notary rejected the image
          "(starts_with(trim_space($stdout), 'Applying 1 policy rule(s) to 3 resource(s) with 1 exception(s)...'))": true
          "(contains($stdout, 'policy ivpol-sample -> resource default/StatefulSet/bad-statefulset failed:'))": true
          "(contains($stdout, '1 - ivpol-sample failed to verify image with notary cert; verification details: '))": true
          "(ends_with(trim_space($stdout), 'pass: 1, fail: 1, warn: 0, error: 0, skip: 1'))": true
